Added User API
